# RISC-V-Simulator

./: .gitignore  CMakeLists.txt
include/combinational/: ALU.h  ForwardingUnit.h  HazardDetectionUnit.h  ImmediateGenerator.h
include/combinational/adder/: Adder.h  AdderBase.h  EXAdder.h  IFAdder.h
include/combinational/mux/: EXMux.h  EXMuxALUInput1.h  EXMuxALUInput2.h  IFMux.h  Mux.h  MuxBase.h  WBMux.h
include/combinational/mux/forwarding/: ALUInput1ForwardingMux.h  ALUInput2ForwardingMux.h  ALUInputForwardingMuxBase.h
include/common/: BitwiseOperations.h  Config.h  Control.h  Instruction.h  Logger.h  Module.h  StageSynchronizer.h
include/common/logger/: EXLogger.h  IDLogger.h  IFLogger.h  Logger.h  LoggerBase.h  MEMLogger.h  WBLogger.h
include/state/: DataMemory.h  Driver.h  IFIDStageRegisters.h  InstructionMemory.h  RegisterFile.h
include/state/stage-registers/: EXMEMStageRegisters.h  IDEXStageRegisters.h  IFIDStageRegisters.h  MEMWBStageRegisters.h
output/ExpectedResults/: SS_RFResult.txt
src/: main.cpp
src/combinational/: ALU.cpp  ForwardingUnit.cpp  HazardDetectionUnit.cpp  IFAdder.cpp  IFMux.cpp  ImmediateGenerator.cpp
src/combinational/adder/: EXAdder.cpp  IFAdder.cpp
src/combinational/mux/: EXMux.cpp  EXMuxALUInput1.cpp  EXMuxALUInput2.cpp  IFMux.cpp  MuxBase.cpp  WBMux.cpp
src/combinational/mux/forwarding/: ALUInput1ForwardingMux.cpp  ALUInput2ForwardingMux.cpp  ALUInputForwardingMuxBase.cpp
src/common/: BitwiseOperations.cpp  Config.cpp  Control.cpp  Instruction.cpp  Logger.cpp  Module.cpp  StageSynchronizer.cpp
src/common/logger/: EXLogger.cpp  IDLogger.cpp  IFLogger.cpp  Logger.cpp  LoggerBase.cpp  MEMLogger.cpp  WBLogger.cpp
src/state/: DataMemory.cpp  Driver.cpp  IFIDStageRegisters.cpp  InstructionMemory.cpp  RegisterFile.cpp
src/state/stage-registers/: EXMEMStageRegisters.cpp  IDEXStageRegisters.cpp  IFIDStageRegisters.cpp  MEMWBStageRegisters.cpp
